--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -1,5 +1,5 @@
 
-<div style="height:100%;width:100%;background:#eeeeee">
+<div id='searchPage' style="height:100%;width:100%;background:#eeeeee">
     <a ui-sref="index" ><b>BACK</b></a>
     <input type="search" ng-model="search" placeholder="Type Search..." style="color:black;width:100%">
     <div style="width:100%;">
