--- a/www/css/normalize.css
+++ b/www/css/normalize.css
@@ -128,10 +128,13 @@ dfn {
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
 
+/*
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+  display:inline-grid;
+  font-size: 6rem;
+  margin: 0.67rem 0;
 }
+*/
 
 /**
  * Address styling not present in IE 8/9.
