--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,36 +4,91 @@ html, body{
 	overflow: -moz-scrollbars-vertical;
 	height: 100%; /* fixes focus scrolling in Safari (OS X) */
     
-    font: 100% "Oswald", sans-serif;
+    font: 100% "Milo", sans-serif;
     font-weight: 400;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;   
 }
-
 body{
     background:#000;
-    background-image: url(../img/jimsanborn.jpg);
-    background-position:  center ;
+    background-image: url(../img/jimsanborn1.png);
+    background-position:  100%;
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
 }
+#indexWrapper{
+    position:absolute;
+    vertical-align: top;
+    width:100%;
+    height:100%;
+}
+/*
+origin.html
+*/
+
+#logotitle {
+    position:relative;
+    width:100%;
+    padding:2%;
+    background-color: white;
+    z-index:2; 
+}
+#titleImg {
+    max-width:350px;
+}
+#logosearch {
+    position: absolute;
+    top:8%;
+    right:3%;
+    margin: 0 auto;
+    width: 14%;
+}
+#textcontainer {
+    position:relative;
+    display:inline-block;
+    background-color: transparent;
+    border-bottom-style:solid;
+    border-bottom-color: #fff;
+    border-bottom-width: 2em;
+    padding-bottom:10%;
+    z-index:22;
+    left:5%;
+    width:80%;
+    max-width:600px;
+    margin-bottom: 10%; 
+    margin-top:10%;
+    overflow:hidden;
+}
+#tourList {
+    position:relative;
+    cursor:pointer;
+    width:100%;
+    top:5%;
+    left:3%;
+}
+#exploreList {
+    position:relative;
+    cursor:pointer;
+    width:100%;
+    bottom:5%;
+    left:3%;
+}
+#uhLogo{
+    position:absolute;
+    background-color:black;
+    width:100%;
+    bottom:2%;
+}
+
 
 #map-canvas{
     margin-top: 1rem;
     background-color: #ebebda; 
     width: 100%; 
     height: 93%;
-}
-.logosearch {
-    position:fixed;
-    top:2rem;
-    right:5%;
-    margin: 0 auto;
-    position: absolute;
-    width: 4rem;
 }
 #navcontainer{
     width: 7rem;
@@ -53,14 +108,14 @@ body{
 }
 
 /*used for pop ups*/
-    #wrapper {
+#wrapper {
     height: 50%;
     left: 50%;
     position: absolute;
     top: 50%;
     width: 50%;
 }
-    #center {
+#center {
     bottom: 50%;
     height: 100%;
     position: absolute;
@@ -83,35 +138,29 @@ body{
         box-shadow: 2px 2px 2px 0 #000;
 }
 
-.textcontainer {
-    padding: 2rem;
-    font-family: "Oswald", Sans-Serif;
-    font-weight: 400;
-    font-size: 10rem;
-    color: white;
-    line-height:100%;
-    margin: 0 auto; 
-}
+
 
 .sizeofbutton { 
     width: 60px;
     height: 60px; 
 }
 
-.logotitle {
-    font-family: "Lato", Sans-serif;
-    font-weight: 400;
-    color: #6798AC;
-    padding: 1rem;
-    font-size: 4rem;
-    background-color: white;
-    z-index:2; 
+/*
+@media only screen and (min-width: 380px) {
+    #logotitle {
+        font-family: "Lato", Sans-serif;
+        font-weight: 400;
+        color: #6798AC;
+        padding: 1rem;
+        font-size: 4rem;
+        margin-bottom:-1em;
+        background-color: blue;//white;
+        z-index:2; 
+        height:20%;
+    }
 }
+*/
 
-.logotitle b {
-    font-weight: 700;
-    color: #FE7F78;
-}
 
 #testbuttons{
         width: 20rem;
@@ -147,13 +196,15 @@ body{
     }
     
     
+/*
     img {
         max-width: 100%;
     }
+*/
 
 
 
-/*make links look good*/
+/*make links look good
 a:link {
     text-decoration: none;
     color: #fff;
@@ -170,8 +221,8 @@ a:active {
     text-decoration: none;
     color: #fff;
 }
-
-
+*/
+/*tours.html*/
 #menucontainer {
     width: 100%;
     height: 100%;
@@ -186,12 +237,14 @@ a:active {
     line-height: 1rem;
 }
 
+/*
 .sub {
     font-weight: 100;
     font-size: 2rem;
     line-height: 1.6rem;
     padding: 3px;
 }
+*/
 
 /*horizontal rule*/
 hr {
@@ -203,7 +256,87 @@ hr {
   margin: 0 0 0.6em;
   border: none; 
 }
-
+/*snap's css - copied here so I can modify*/
+snap-content,
+[snap\:content],
+[snap-content],
+[data-snap-content],
+[x-snap-content],
+.snap-content,
+.x-snap-content,
+snap-drawers,
+[snap\:drawers],
+[snap-drawers],
+[data-snap-drawers],
+[x-snap-drawers],
+.snap-drawers,
+.x-snap-drawers,
+.snap-drawers,
+.snap-content {
+  position: fixed;
+  height: auto;
+  top: 0;
+  bottom: 0;
+  width: auto;
+  left: 0;
+  right: 0;
+}
+snap-drawer,
+[snap\:drawer],
+[snap-drawer],
+[data-snap-drawer],
+[x-snap-drawer],
+.snap-drawer,
+.x-snap-drawer,
+.snap-drawer {
+  position: absolute;
+  height: auto;
+  top: 0;
+  bottom: 0;
+  overflow: hidden;
+/*  overflow: auto;*/
+  -webkit-transition: top 0.2s linear;
+  -moz-transition: top 0.2s linear;
+  -o-transition: top 0.2s linear;
+  transition: top 0.2s linear;
+  -webkit-transition: bottom 0.2s linear;
+  -moz-transition: bottom 0.2s linear;
+  -o-transition: bottom 0.2s linear;
+  transition: bottom 0.2s linear;
+  -webkit-overflow-scrolling: touch;
+  -moz-overflow-scrolling: touch;
+  -o-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+  width: 265px;
+}
+.snap-content {
+  z-index: 2;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  -moz-overflow-scrolling: touch;
+  -o-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+}
+.snap-drawer-left {
+  left: 0;
+  z-index: 1;
+}
+.snap-drawer-right {
+  right: 0;
+  z-index: 1;
+}
+.snapjs-left .snap-drawer-right,
+.snapjs-right .snap-drawer-left {
+  display: none;
+}
+.snapjs-expand-left .snap-drawer-left,
+.snapjs-expand-right .snap-drawer-right {
+  width: 100%;
+}
 /*image cropping for profiles*/
 /*
 .crop {
@@ -274,7 +407,7 @@ hr {
     
     .container {
         height: 90%;
-        width: 90%;
+        width: 30%;
         overflow-y: scroll;
         overflow-x: hidden;
     }
@@ -286,7 +419,6 @@ hr {
    
     
     
-
 
 
 
@@ -313,48 +445,108 @@ Min-width Media Queries
 Introduce layout-specific rules only when you need them. Use min-width to layer complexity on your layout as the viewport widens. It’s easier to have all the media queries nearby, rather than at the end of the stylesheet or in a separate document.
 */
 
-@media (min-width: 320px) {
-    .textcontainer{
-        font-size: 230%;
+@media (min-width: 430px) { 
+    #logotitle {
+/*
+        font-family: "Lato", Sans-serif;
+        font-weight: 400;
+        color: #6798AC;
+        padding: 1rem;
+        font-size: 4rem;
+        margin-bottom:-1em;
+
+        border-style:solid;
+        border-color: blue;
+        z-index:2; 
+        height:10%;
+        */
     }
+    #logosearch {
+        width: 8%;
+    }
+    #textcontainer{
+        position:absolute;
+        border-bottom-color: transparent;
+        max-width:50%;
+        top:15%;
+/*
+        max-width:90%;
+        max-height:80%;
+*/
+    }
+/*
+    #tourList {
+        width:50%;
+    }
+    #exploreList {
+        width:50%;
+    }
+*/
     #menucontainer{
         font-size: 150%;
     }
+/*
     #rectangle{
-        width: 260px;
-        height: 30px;
         background: white;
     }
+*/
     
 }
-
-@media (min-width: 480px) {
-/*    html { font-size: 78%; }*/
-    .textcontainer{
-        font-size: 378%;
+/*
+@media only screen and (min-width: 480px) {
+    #logotitle {
+        font-family: "Lato", Sans-serif;
+        font-weight: 400;
+        color: #6798AC;
+        padding: 1rem;
+        font-size: 4rem;
+        margin-bottom:-1em;
+        background-color: blue;//white;
+        z-index:2; 
+        height:20%;
+    }
+}
+*/
+/*
+@media (min-width: 980px) { //480
+    #logotitle {
+        font-family: "Lato", Sans-serif;
+        font-weight: 400;
+        color: #6798AC;
+        padding: 1rem;
+        font-size: 4rem;
+        margin-bottom:-1em;
+        background-color: blue;//white;
+        z-index:2; 
+        height:20%;
+    }
+    #textcontainer{
+        position:absolute;
+        top:20%;
+        max-width:90%;
+        max-height:80%;
     }
     #rectangle{
-        width: 420px;
-        height: 46px;
-        background: white;
+        background: yellow; //white;
     }
     #menucontainer{
         font-size: 150%;}
 }
+*/
  
+/*
 @media (min-width: 640px) { 
-/*    html { font-size: 104%; }*/
-    .textcontainer{
+    #textcontainer{
         font-size: 520%;
     }
     #rectangle{
-        width: 576px;
-        height: 61px;
-        background: white;}
+        background: red;//white;
+    }
     #menucontainer{
         font-size: 150%;
     }
 }
+*/
 
 /*
 CSS Box Model
@@ -432,7 +624,8 @@ A container holds all elements and controls the page’s maximum width. Using a 
 
 
 /*Add the class .flow-opposite to columns where you want content to display first on mobile but appear on the right on larger screens.*/
+/*
 
 @media (min-width: 40rem) {
   .column.flow-opposite { float: right; }
-}
+}*/
