--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -2,17 +2,20 @@
     <div id="menucontainer">
     <br/><a ui-sref="index" style="font-size: 2rem;"><b>BACK</b></a><br/><br/><br/>
     <div>
-        <div snap-toggle="left" ng-click="favTourClick()">
-            <a style="font-size: 2rem;">Favorites</a><br/><br/>
-            <hr>
-        </div>
+        <div snap-toggle="left" >
+            <a ng-click="favTourClick()" >Favorites</a><br/><br/>
+<!--            <hr>-->
+    </div>
+    <div id="exploreList" ui-sref="explore" >
+        <img ng-src="img/explore.svg"/>
+    </div>
         <!--<div snap-toggle="left" ng-click="newTourClick()">
             <a style="font-size: 2rem;">New</a><br/><br/>
             <hr>
         </div>-->
     </div>
-    <div ng-repeat="tour in tours">
-        <div snap-toggle="left" ng-click="tourClick(tour)">
+    <div ng-repeat="tour in tours" class="row responsive-sm">
+        <div ng-click="tourClick(tour)">
             <a style="font-size: 2rem;">{{tour.tour_title}}</a><br/><br/>
             <hr>
         </div>
