--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,14 +19,9 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
 }
-#indexWrapper{
-    position:absolute;
-    vertical-align: top;
-    width:100%;
-    height:100%;
-}
+
 /*
-origin.html
+origin.html - all to be deleted, but left in for reference for splash page
 */
 
 #logotitle {
@@ -82,7 +77,7 @@ origin.html
     width:100%;
     bottom:2%;
 }
-
+/*end of origin*/
 
 #map-canvas{
     margin-top: 1rem;
