--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,3 +1,4 @@
+<!--To delete; left now to reference for splash page-->
 <div id="logotitle">
     <img id="titleImg" ng-src="img/title.svg"/>
     <img ui-sref="search.artist" src="img/search.svg" id="logosearch" >
