cleaning and overall structure changes (json files into json) Controllers, Services in separate files

--- a/www/templates/tours.html
+++ b/www/templates/tours.html
@@ -28,4 +28,4 @@
         <a snap-toggle="left" class="sub"><b>VIEW</b></a> <span ng-show=tourArt>| <a ng-click=startTour() class="sub"><b>START</b></a></span><div id="map-canvas"></div>
     </div>
 </snap-content>
-<div ng-include="'partials/profile.html'"></div>
+<div ng-include="'templates/profile.html'"></div>
