--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -87,4 +87,4 @@ for toofar onCampus
 <div class="mapView" ng-hide="phoneUp" style="height:100%;width:100%">
     <div id="map-view" style="width: 100%; height: 100%;"></div>
 </div>
-<div ng-include="'partials/profile.html'"></div>
+<div ng-include="'templates/profile.html'"></div>
