Reattaching the head in a very round-about way.

--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -12,5 +12,5 @@
         <div ng-click="order='counter';" style="width:33.3%;float:left">Popular</div>
         <div ng-click="order='date_made';" style="width:33.3%;float:left">Recent</div>
     </div>
-    <div ng-include="'templates/profile.html'"></div>
+    <div ng-include="'partials/profile.html'"></div>
 </div>
