--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -19,5 +19,5 @@
         </div>
     </div>
 
-<div ng-include="'templates/profile.html'"></div>
+<div ng-include="'partials/profile.html'"></div>
 </ion-content>
