Artwork for specific tour now available in imslide.

--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -8,8 +8,8 @@
     
 <!--        <div id="map-canvas"></div>-->
         
-        <a class="item" ng-click="favTourClick()" >Favorites</a>
-        <a class="item" ng-click="testFunc()" >Explore</a>
+        <a class="item" ng-click="favTourClick()" >My Favorites</a>
+        <a class="item" ng-click="testFunc()" ><h1>Explore</h1></a>
         <!--<div snap-toggle="left" ng-click="newTourClick()">
             <a style="font-size: 2rem;">New</a><br/><br/>
             <hr>
