--- a/www/partials/imslide.html
+++ b/www/partials/imslide.html
@@ -3,7 +3,7 @@
         <div class="buttons">
             <button class="button" ng-click="menuToggle()">Left Button</button>
         </div>
-        <h1 class="title">Title!</h1>
+        <h1 class="title">{{tourGet() ? tourGet().tour_id : 'Default Title for Default Title Testing Purposes'}}</h1>
         <div class="buttons">
 <!--            <button class="button">Right Button</button>-->
         </div>
@@ -11,6 +11,12 @@
     
 <!--    <ion-content>-->
         <ion-slide-box on-slide-changed="slideHasChanged($index)">
+
+            <ion-slide>
+                <div class="box blue"><img ng-src="img/{{tourGet() ? tourGet().tour_id : 1}}.jpg"
+                                           ng-style="{'width' : '100%'}"></div>
+            </ion-slide>
+            <!--
             <ion-slide>
                 <div class="box blue"><img ng-src="http://www.housuggest.org/images/ARtour/1/manual.png"
                                            ng-style="{'width' : '100%'}"></div>
@@ -26,10 +32,6 @@
             <ion-slide>
                 <div class="box pink"><img ng-src="http://www.housuggest.org/images/ARtour/4/scottburton.png"
                                            ng-style="{'width' : '100%'}"></div>
-            </ion-slide>
-<!--
-            <ion-slide>
-                <div class="box pink"><h1>MAP GOES HERE</h1></div>
             </ion-slide>
 -->
         </ion-slide-box>
