Attempt to fix slidebox #1. For Carl.

--- a/www/partials/imslide.html
+++ b/www/partials/imslide.html
@@ -12,7 +12,7 @@
 <!--    <ion-content>-->
         <ion-slide-box on-slide-changed="slideHasChanged($index)">
 
-            <ion-slide ng-repeat="artOb in artworkGet()">
+            <ion-slide ng-repeat="artOb in genArtList()">
 <!--
                 <div class="box blue"><img ng-src="img/{{tourGet() ? tourGet().tour_id : 1}}.jpg"
                                            ng-style="{'width' : '100%'}"></div>
