--- a/www/partials/imslide.html
+++ b/www/partials/imslide.html
@@ -10,7 +10,7 @@
     </ion-header-bar>
     
 <!--    <ion-content>-->
-        <ion-slide-box on-slide-changed="slideHasChanged($index)">
+        <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)">
 
             <ion-slide ng-repeat="artOb in genArtList()">
 <!--
