--- a/www/partials/imslide.html
+++ b/www/partials/imslide.html
@@ -5,40 +5,14 @@
         </div>
         <h1 class="title">{{tourID}}</h1>
         <div class="buttons">
-<!--            <button class="button">Right Button</button>-->
+            
         </div>
     </ion-header-bar>
-    
-<!--    <ion-content>-->
+    <ion-content>
         <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)">
-
             <ion-slide ng-repeat="artOb in artworkGet(tourID)">
-<!--
-                <div class="box blue"><img ng-src="img/{{tourGet() ? tourGet().tour_id : 1}}.jpg"
-                                           ng-style="{'width' : '100%'}"></div>
--->
-            <div class="box blue"><img ng-src="{{genImList(artOb)}}"
-                                       ng-style="{'width' : '100%'}">       </div>
-                
+                <div class="box blue"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
             </ion-slide>
-            <!--
-            <ion-slide>
-                <div class="box blue"><img ng-src="http://www.housuggest.org/images/ARtour/1/manual.png"
-                                           ng-style="{'width' : '100%'}"></div>
-            </ion-slide>
-            <ion-slide>
-                <div class="box yellow"><img ng-src="http://www.housuggest.org/images/ARtour/2/lawrenceargent.png"
-                                             ng-style="{'width' : '100%'}"></div>
-            </ion-slide>
-            <ion-slide>
-                <div class="box green"><img ng-src="http://www.housuggest.org/images/ARtour/3/jesusbautistamoroles.png"
-                                             ng-style="{'width' : '100%'}"></div>
-            </ion-slide>
-            <ion-slide>
-                <div class="box pink"><img ng-src="http://www.housuggest.org/images/ARtour/4/scottburton.png"
-                                           ng-style="{'width' : '100%'}"></div>
-            </ion-slide>
--->
         </ion-slide-box>
-<!--    </ion-content>-->
+    </ion-content>
 </ion-view>
