--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,3 +1,6 @@
-<ion-view title="ImageSlide">
-    <h1>DEFAULT CONTENT</h1>
+<ion-view title="Main Content">
+    <ion-nav-bar class="bar-dark"></ion-nav-bar>
+    <ion-content>
+        <h1>DEFAULT CONTENT</h1>
+    </ion-content>
 </ion-view>
