Added some titles and little things.

--- a/www/partials/search.artist.html
+++ b/www/partials/search.artist.html
@@ -1,5 +1,6 @@
+<!--
 <div ng-repeat="name in artists | filter:search">
         <div ui-sref="search.artwork" ng-click="setSearch(name)">
             {{name}}
         </div>
-</div>
+</div>-->
