--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -1,3 +1,4 @@
+<!--
 
 <div id='searchPage' style="height:100%;width:100%;background:#eeeeee">
     <a ui-sref="index" ><b>BACK</b></a>
@@ -13,4 +14,4 @@
         <div ng-click="order='date_made';" style="width:33.3%;float:left">Recent</div>
     </div>
     <div ng-include="'partials/profile.html'"></div>
-</div>
+</div>-->
