--- a/www/partials/search_mock.html
+++ b/www/partials/search_mock.html
@@ -61,6 +61,7 @@
 }
     
 </style>
+<!--
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" type="text/css">
 
 
@@ -98,4 +99,4 @@
   <img src="http://i1094.photobucket.com/albums/i453/dantvo/LindaHoward.jpg">
   <img src="http://i1094.photobucket.com/albums/i453/dantvo/JimLove.jpg">
 
-</section>
+</section>-->
