--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -2,14 +2,14 @@
 <ion-nav-bar class="bar-dark"></ion-nav-bar>
 <ion-content style="background-color: #50f062">
     <div class="list">
-        <a class="item" ui-sref="">
+        <a class="item" ui-sref="tour">
             All Artwork
         </a>
         <a class="item item-icon-left" ng-click="favTourClick()" >
             <i class="icon ion-star"></i>
             My Favorites
         </a>
-        <a class="item" ng-click="testFunc()"><h1>Explore</h1></a>
+<!--        <a class="item" ng-click="testFunc()"><h1>Explore</h1></a>-->
         <div ng-click="menuShow=!menuShow" class="item item-icon-left item-divider" ng-init="menuShow=false">
             <i ng-hide="menuShow" class="icon ion-arrow-down-b"></i>
             <i ng-show="menuShow" class="icon ion-arrow-right-b"></i>
