--- a/www/partials/imslide.html
+++ b/www/partials/imslide.html
@@ -1,14 +1,17 @@
-<ion-view title="ImageSlide">
+<ion-view>
     <ion-header-bar align-title="center" class="bar-dark">
         <button ng-hide="$exposeAside.active" class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
         <h1 class="title">{{tourGet(tourID).tour_title}}</h1>
         <button class="button button-icon button-clear " ng-click="loadAR()">Start Tour</button>
     </ion-header-bar>
-    <ion-content>
-        <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)">
-            <ion-slide ng-repeat="artOb in artworkGet(tourID)">
-                <div class="box blue"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
-            </ion-slide>
-        </ion-slide-box>
+    <div class="bar bar-subheader" style="margin-bottom: -50px">
+        <h2 class="title">{{visible_art_title}}</h2>
+    </div>
+    <ion-content class="has-subheader">
+    <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)">
+        <ion-slide ng-repeat="artOb in artworkGet(tourID)">
+            <div class="box blue"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
+        </ion-slide>
+    </ion-slide-box>
     </ion-content>
 </ion-view>
