--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,6 +1,8 @@
-<ion-view title="Main Content">
-    <ion-nav-bar class="bar-dark"></ion-nav-bar>
-    <ion-content>
-        <h1>DEFAULT CONTENT</h1>
-    </ion-content>
+<ion-view title="All Artwork">
+<ion-nav-bar class="bar-dark"></ion-nav-bar>
+<ion-content>
+    <div class="list">
+        <div class="item" ng-repeat="item in artworkGet()"> {{item.title}} </div>
+    </div>
+</ion-content>
 </ion-view>
