--- a/www/partials/imslide.html
+++ b/www/partials/imslide.html
@@ -1,17 +1,15 @@
-<ion-view>
-    <ion-header-bar align-title="center" class="bar-dark">
-        <button ng-hide="$exposeAside.active" class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
-        <h1 class="title">{{tourGet(tourID).tour_title}}</h1>
-        <button class="button button-icon button-clear " ng-click="loadAR()">Start Tour</button>
-    </ion-header-bar>
+<ion-view title="{{tourGet(tourID).tour_title}}">
+    <ion-nav-buttons side='right'>
+        <button class="button button-icon button-clear" ng-click="loadAR()">Start Tour</button>
+    </ion-nav-buttons>
     <div class="bar bar-subheader" style="margin-bottom: -50px">
         <h2 class="title">{{visible_art_title}}</h2>
     </div>
     <ion-content class="has-subheader">
-    <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)">
-        <ion-slide ng-repeat="artOb in artworkGet(tourID)">
-            <div class="box blue"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
-        </ion-slide>
-    </ion-slide-box>
+        <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)" does-continue="true">
+            <ion-slide ng-repeat="artOb in artworkGet(tourID)">
+                <div class="box"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
+            </ion-slide>
+        </ion-slide-box>
     </ion-content>
 </ion-view>
