--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,8 +1,16 @@
-<ion-view title="All Artwork">
-<ion-nav-bar class="bar-dark"></ion-nav-bar>
+<ion-view title="All Artwork"> 
+<ion-nav-buttons side='right'>
+    <button class="button button-icon button-clear" ng-click="loadAR()">Start Tour</button>
+</ion-nav-buttons>
+<ion-header-bar align-title="left" class="bar-dark bar-subheader">
+    <label class="item-input-wrapper">
+        <i class="icon ion-ios7-search placeholder-icon"></i>
+        <input ng-model="query" type="search" placeholder="   Search">
+    </label>
+</ion-header-bar>
 <ion-content>
     <div class="list">
-        <div class="item" ng-repeat="item in artworkGet()"> {{item.title}} </div>
+        <div class="item" ng-repeat="item in artworkGet() | filter: query"> {{item.title}} </div>
     </div>
 </ion-content>
 </ion-view>
