--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -1,6 +1,5 @@
 <ion-view title="Menu">
-<ion-nav-bar class="bar-dark"></ion-nav-bar>
-<ion-content style="background-color: #50f062">
+<ion-content>
     <div class="list">
         <a class="item" ui-sref="tour">
             All Artwork
