--- a/www/partials/world/css/poi-radar.css
+++ b/www/partials/world/css/poi-radar.css
@@ -1,13 +1,17 @@
-/* 
-	Position of POI-radar
-	We advise you to use an absolute position for the element which will be referred to the radar container. 
-	Keep in mind: In case the DOM element is updated on the fly via jQuery or responsive design use 'AR.radar.notifyUpdateRadarPosition();'
-	to force radar position/size updates, otherwise the very first position/size will be used.
-*/
+/* position of POI-radar*/
+
 .radarContainer_left {
 	position:absolute;
-	bottom:0px;
+	top:35px;
 	left:0px;
+	width:100px;
+	height:100px;
+}
+
+.radarContainer_right {
+	position:absolute;
+	top:35px;
+	right:0px;
 	width:100px;
 	height:100px;
 }
