--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,4 +1,5 @@
-<!--To delete; left now to reference for splash page-->
+<!--
+To delete; left now to reference for splash page
 <div id="logotitle">
     <img id="titleImg" ng-src="img/title.svg"/>
     <img ui-sref="search.artist" src="img/search.svg" id="logosearch" >
@@ -13,3 +14,4 @@
 </div>   
 <img id="uhLogo" ng-src="img/uh-oneline-white.png"/>
 
+-->
