Removed unused services.

--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -19,7 +19,7 @@
             <i class="icon ion-star"></i>
             My Favorites
         </a>
-        <div ng-click="menuShow=!menuShow" class="item item-icon-left item-divider" ng-init="menuShow=true">
+        <div ng-click="menuShow=!menuShow" class="item item-icon-left item-divider" ng-init="menuShow=false">
             <i ng-hide="menuShow" class="icon ion-arrow-down-b"></i>
             <i ng-show="menuShow" class="icon ion-arrow-right-b"></i>
             Public Art Tours
