--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -10,11 +10,9 @@
 </ion-header-bar>
 <ion-content>
     <div class="list">
-<!--
         <a class="item" ui-sref="tour" menu-close nav-clear>
             All Artwork
         </a>
--->
         <a class="item item-icon-left" ng-click="favTourClick()" menu-close nav-clear>
             <i class="icon ion-star"></i>
             My Favorites
@@ -38,3 +36,6 @@
     </div>
 </ion-content>
 </ion-view>
+<ion-footer-bar align-title="left" class="bar-dark">
+    <img style="margin-left: calc(50% - 50px); width: 100px" src="img/HCLOGO2.png"/>
+</ion-footer-bar>
