Got the map in, we will need to structure the data loading differently to feed the markers correctly into the map.
Moved the $timeout for menu open into the controller

--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,5 +1,10 @@
 <ion-view title="Collage"> 
     <ion-content>
         We are planning on putting a collage here on first startup.
+        
+        <br/>
+        Test Map
+        <br/>
+        <googlemaps class="google-maps" options="map1"></googlemaps>
     </ion-content>
 </ion-view>
