--- a/www/partials/imageSlider.html
+++ b/www/partials/imageSlider.html
@@ -7,6 +7,9 @@
     </div>
     <ion-content class="has-subheader">
         <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)" does-continue="true">
+            <ion-slide>
+                <googlemaps class="google-maps" options="map1"></googlemaps>
+            </ion-slide>
             <ion-slide ng-repeat="artOb in artworkGet(tourID)">
                 <div class="box"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
             </ion-slide>
