Got started on some artwork detail, very basic at this point. Rename filter better/more descriptive. Made it show "Tour Map" in the sub-header Added a little button to view art details state from imslider

--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,7 +1,5 @@
-<ion-view title="{{detailArt(art_id).title}}"> 
+<ion-view title="{{detailArt.title}}"> 
     <ion-content>
-        Detail about artwork with ID: {{art_id}}
-        <br/>
-        Art: {{detailArt(art_id)}}
+        Detail about artwork: {{detailArt.title}} will be shown here soon!
     </ion-content>
 </ion-view>
