--- a/www/partials/imageSlider.html
+++ b/www/partials/imageSlider.html
@@ -4,6 +4,7 @@
     </ion-nav-buttons>
     <div class="bar bar-subheader" style="margin-bottom: -50px">
         <h2 class="title">{{visible_art_title}}</h2>
+        <button ng-show="current_art_id" class="button button-clear button-dark" ui-sref="tour.artDetail({artID:current_art_id})">Details</button>
     </div>
     <ion-content class="has-subheader">
         <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)" does-continue="false">
@@ -11,7 +12,7 @@
                 <div class="box"><img ng-src="{{genImList(artOb)}}" ng-style="{'width' : '100%'}"></div>
             </ion-slide>
             <ion-slide>
-                <googlemaps class="google-maps" options="map1"></googlemaps>
+                <googlemaps class="google-maps" options="map"></googlemaps>
             </ion-slide>
         </ion-slide-box>
     </ion-content>
