--- a/www/partials/imageSlider.html
+++ b/www/partials/imageSlider.html
@@ -25,8 +25,8 @@
     <ion-nav-buttons side='right'>
         <button class="button button-icon button-clear" ng-click="loadAR()">Start Tour</button>
     </ion-nav-buttons>
-    <ion-content>
-        <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)">
+    <ion-content delegate-handle="sliderScroll">
+        <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="true" does-continue="true" style="height: 100%">
             <ion-slide class="list" ng-repeat="artArr in artworkGetCol(tourID)">
                 <ion-item class="item item-thumbnail-left item-text-wrap" ng-repeat="artOb in artArr">
                     <img ng-src="{{genImList(artOb)}}">
@@ -34,9 +34,14 @@
                     <p>{{artOb.description}}</p>
                 </ion-item>
             </ion-slide>
-            <ion-slide>
-                <googlemaps class="google-maps" options="map"></googlemaps>
-            </ion-slide>
         </ion-slide-box>
+        <div ng-click="toggleMap()" class="item item-icon-left item-divider">
+            <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
+            <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
+            Map
+        </div>
+        <div ng-show="mapShow">
+            <googlemaps class="google-maps" options="map"></googlemaps>
+        </div>
     </ion-content>
 </ion-view>
