--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -13,7 +13,7 @@
         <a class="item" ui-sref="tour" menu-close nav-clear>
             All Artwork
         </a>
-        <a class="item item-icon-left" ng-click="favTourClick()" menu-close nav-clear>
+        <a class="item item-icon-left" ui-sref="tour.favorites" menu-close nav-clear>
             <i class="icon ion-star"></i>
             My Favorites
         </a>
