--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -5,7 +5,7 @@
     <ion-content>
         <ion-slide-box delegate-handle="start-slider" on-slide-changed="slideHasChanged($index)">
             <ion-slide ng-repeat="artArr in artworkGet()">
-                <div class="row" ng-repeat="artOb in artArr">
+                <div class="row" ng-repeat="artOb in artArr" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
                     <div class="col" style="text-align: center;">
                         <img ng-src="{{genImList(artOb)}}" style="width:100%; min-width: 250px;">
                     </div>
