More cleanup. The build size is down to just under 10MB now. Centered logo correctly, it will now work on a wider variety of devices.

--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -37,5 +37,5 @@
 </ion-content>
 </ion-view>
 <ion-footer-bar align-title="left" class="bar-dark">
-    <img style="margin-left: calc(50% - 50px); width: 100px" src="img/HCLOGO2.png"/>
+    <img style="height: 100%; width: auto" class="center-img" src="img/HCLOGO2.png"/>
 </ion-footer-bar>
