--- a/www/css/active_style.css
+++ b/www/css/active_style.css
@@ -3,3 +3,9 @@
     height: 500px;
     z-index: 10000;
 }
+
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
