--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -1,6 +1,9 @@
-<ion-view title="Menu">
+<ion-view>
+<ion-nav-bar class="bar-dark">
+    <h1 class="title" style="text-align: left">Menu</h1>
+</ion-nav-bar>
 <ion-nav-buttons side='right'>
-    <button class="button button-icon button-clear" ng-click="loadAR()">Start Tour</button>
+    <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
 </ion-nav-buttons>
 <ion-header-bar align-title="left" class="bar-dark bar-subheader">
     <label class="item-input-wrapper">
