Updated the favorites button to be the ones from the SoA time.

--- a/www/partials/imageSlider.html
+++ b/www/partials/imageSlider.html
@@ -1,6 +1,6 @@
 <ion-view title="{{tourGet(tourID).tour_title}}">
     <ion-nav-buttons side='right'>
-        <button class="button button-icon button-clear" ng-click="loadAR()">Start Tour</button>
+        <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll">
         <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="true" does-continue="true" style="height: 100%">
