--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,6 +1,6 @@
 <ion-view title="AR Tours">
     <ion-nav-buttons side='right'>
-        <button class="button button-icon button-clear" ng-click="loadAR()">Start Tour</button>
+        <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
     </ion-nav-buttons>
     <ion-content>
         <ion-slide-box delegate-handle="start-slider" on-slide-changed="slideHasChanged($index)">
