--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -20,10 +20,10 @@
 <ion-view title="{{detailArt.title}}"> 
     <ion-nav-buttons side='right'>
         <button class="button button-icon button-clear" ng-show="!isFavorite" ng-click="markFavorite()">
-            <i class="icon ion-asterisk"></i>
+            <img src="img/fav_no.svg" height="30px"/>
         </button>
         <button class="button button-icon button-clear" ng-show="isFavorite" ng-click="markNotFavorite()">
-            <i class="icon ion-android-star"></i>
+            <img src="img/fav_yes.svg" height="30px"/>
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll">
