--- a/www/css/active_style.css
+++ b/www/css/active_style.css
@@ -9,3 +9,56 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+/*
+html, body{
+    height: 95%;
+    overflow: hidden;
+}
+#container {
+    height: 50%;
+    overflow-y: scroll;
+}
+*/
+.box {
+   /* Prevent vertical gaps */
+    -webkit-columns: 4 150px;
+    -moz-columns: 4 150px;
+    columns: 4 150px;
+    -webkit-column-gap:   0px;
+    -moz-column-gap:      0px;
+    column-gap:           0px;
+}
+.box * {
+    display: inline-block;
+}
+.box * img {
+    /* Just in case there are inline attributes */
+    width: 100% !important;
+    height: auto !important;
+    margin-bottom: 0px;
+    margin-bottom: 50px;
+}
+.photo_container {
+    position: relative;
+    left: 2px;
+    right: 2px;
+    top: 2px;
+}
+.photo_container #titleBox {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #000;
+    height: 70px;
+    margin-bottom: 2px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #FFF;
+    padding: 0px;
+    text-align: center;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
