--- a/www/partials/imageSlider.html
+++ b/www/partials/imageSlider.html
@@ -3,19 +3,12 @@
         <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll">
-        <ion-slide-box delegate-handle="main-slider" on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="true" does-continue="true" style="height: 100%">
-            <ion-slide ng-repeat="artArr in artworkGetCol(tourID)">
-                <div class="row" ng-repeat="artOb in artArr" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
-                    <div class="col" style="text-align: center;">
-                        <img ng-src="{{genImList(artOb)}}" style="width:100%; min-width: 250px;">
-                    </div>
-                    <div class="card col">
-                        <h2>{{artOb.title}}</h2>
-                        <p>{{artOb.description}}</p>
-                    </div>
-                </div>
-            </ion-slide>
-        </ion-slide-box>
+        <div class="box">
+            <div class="photo_container" ng-repeat="artOb in artworkGet(tourID)">
+                <img ng-src="{{genImList(artOb)}}" />
+                <div id="titleBox">{{artOb.title}}</div>
+            </div>
+        </div>
         <div ng-click="toggleMap()" class="item item-icon-left item-divider">
             <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
             <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
